Update vercel.json with enhanced SPA configuration
- Added buildCommand, outputDirectory, and framework specification
- Improved rewrite pattern to exclude API routes
- Ensures proper client-side routing for React SPA on Vercel
- Fixes 404 errors for direct navigation and page refreshes

--- a/real-estate 2/vercel.json
+++ b/real-estate 2/vercel.json
@@ -1,8 +1,11 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!api/).*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "framework": "create-react-app"
 }
